--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 			}
 
 			ajaxRequest.onreadystatechange = function(){
-				if (ajaxRequest.readyState == 4 & ajaxRequest.Status = 200) {
+				if (ajaxRequest.readyState == 4 & ajaxRequest.status == 200) {
 					document.getElementById("info").innerHTML = ajaxRequest.responseText;
 				}
 			}
 
 
-			ajaxRequest.open("GET", "documento.txt",true);
+			ajaxRequest.open("GET", "documento.txt", true);
 			ajaxRequest.send();
 		}
 
